--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"husky": "^8.0.3",
 		"prettier": "^2.8.3",
+		"rollup": "^3.13.0",
 		"typescript": "^4.9.5"
 	}
 }
